# AOC

./: .gitignore  Cargo.toml  requirements.txt
2015/: Cargo.toml
2015/src/: day01.rs  day07.rs  day08.rs  day10.rs  day12.rs  day16.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs
2022/: __init__.py  run.py
2022/aoc2022/: day01.py  day02.py  day05.py  day07.py
2023/: Cargo.toml  README.md
2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs
Python/: start.py
Python/aoc2022/: day03.py  day06.py  day08.py  day10.py  day11.py  day22.py  day23.py
Python/tests/2022/10/: a.txt
Python/tests/2022/14/: a.txt
aoc_thdaele/: __init__.py  run.py  start.py
aoc_thdaele/aoc2022/: day01.py  day02.py  day03.py  day04.py  day05.py  day09.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day24.py  day25.py
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day09.rs  day11.rs  day13.rs  day14.rs  day15.rs  day17.rs  lib.rs  main.rs
tests/2022/01/: a.txt
tests/2022/02/: a.txt
tests/2022/03/: a.txt
tests/2022/04/: a.txt
tests/2022/05/: a.txt
tests/2022/07/: a.txt
tests/2022/09/: a.txt
tests/2022/11/: a.txt
tests/2022/12/: a.txt
tests/2022/17/: a.txt
tests/2022/18/: a.txt
tests/2022/20/: a.txt
tests/2022/22/: a.txt
(+4 files in other folders)
