[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
strum = "0.25.0"
strum_macros = "0.25.3"
itertools = "0.12.0"
serde_json = "1.0.108"
regex = "1.10.2"
rustc-hash = "1.1.0"
num = "0.4.1"
rayon = "1.8.0"